--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@eterna/api",
+  "name": "api",
   "version": "1.0.0",
   "private": true,
   "scripts": {
@@ -11,22 +11,23 @@
     "@eterna/auth": "workspace:*",
     "@eterna/db": "workspace:*",
     "@eterna/utils": "workspace:*",
-    "@prisma/client": "6.6.0",
-    "@types/twilio": "^3.19.3",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
-    "express": "^4.21.2",
-    "express-validator": "^7.0.1",
-    "helmet": "^7.1.0",
-    "morgan": "^1.10.0",
-    "prisma": "6.6.0",
-    "react-hot-toast": "^2.4.1",
-    "twilio": "^5.5.2"
+    "dotenv": "^16.5.0",
+    "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0",
+    "nodemailer": "^6.10.1",
+    "otp-generator": "^4.0.0",
+    "postgres": "^3.4.5"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
-    "@types/morgan": "^1.9.9",
+    "@types/jsonwebtoken": "^9.0.9",
+    "@types/node": "^18.15.11",
+    "@types/nodemailer": "^6.4.17",
+    "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.3.3"
   }
